manifests/labs/lattice/httproute-weighted.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-lattice-weighted
  namespace: workshop-lattice
spec:
  parentRefs:
    - name: workshop-lattice-gateway
      namespace: workshop-lattice
      sectionName: http
  rules:
    - backendRefs:
        - name: podinfo-frontend
          port: 9898
          weight: 80
        - name: podinfo-backend
          port: 9898
          weight: 20
