manifests/labs/lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo-lattice-route
  namespace: workshop-lattice
spec:
  parentRefs:
    - name: workshop-lattice-gateway
      namespace: workshop-lattice
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/info
      backendRefs:
        - name: podinfo-backend
          port: 9898
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo-frontend
          port: 9898
